fix nowrap issue with long tags

--- a/src/less/buttons.less
+++ b/src/less/buttons.less
@@ -252,7 +252,7 @@
 }
 
 // positioning elements when we pull them right in a header
-.pull-right:first-child {
+.pull-right {
   h1 & { margin-top: (@line-height-h1 - @font-size-h1); }
   h2 & { margin-top: (@line-height-h2 - @font-size-h2); }
   h3 & { margin-top: (@line-height-h3 - @font-size-h3); }
@@ -288,6 +288,9 @@
   line-height: 1.8;
   margin-right: 0.5%;
   align-items: center;
+  white-space: nowrap;
+  flex-wrap: nowrap;
+  overflow: hidden;
   .tag-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @btn-border-radius-base);
   &.tag-lg {
     .tag-size((@padding-large-vertical / 1.5); (@padding-large-horizontal / 1.5); @font-size-large; @line-height-large; @btn-border-radius-large);
