--- a/src/less/overrides.less
+++ b/src/less/overrides.less
@@ -83,7 +83,6 @@ ul.no-bullet {
   a&,
   span& {
     display: inline-flex;
-    justify-content: space-around;
     > * {
       margin: 0;
     }
